gcc/testsuite/rust/rustc/ui/issues/issue-46311.rs
fn main() {
    'break: loop { // { dg-error "" "" { target *-*-* } }
    }
}

